--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 </head>
 <body>
 <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?c11a91bed019f9259dff3b08505cbcf1";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+</script>
+<script>
     (function () {
         var loadingArr = [];
         for (var i = 1; i < 8; i++) {
